# Multi-Agent-SDLC-with-Antigravity-SDK

./: README.md  docker-compose.yml
backend/: .env.example  requirements.txt
backend/app/: gemini.py  main.py  zoom_webhook.py
frontend/: index.html  package.json
frontend/src/: App.tsx
k8s/: backend-deployment.yaml  backend-service.yaml
meet_pm_agent/: README.md  pyproject.toml  requirements.txt  research_notes.md
meet_pm_agent/docs/: linux_audio_setup.md
meet_pm_agent/scripts/: run_bot.py  setup_audio.sh
meet_pm_agent/src/meet_pm_agent/: __init__.py  audio_router.py  caption_watcher.py  claude_agent.py  config.py  main.py  meet_bot.py  models.py  tts.py
tools/: meet_recorder.js  zoom_recorder.js
